examples/error-codes/unspecified/USP-STDLIB6-bad.c
#include<stdlib.h>
void foo() {}
void bar() {
  at_quick_exit(foo);
}

int main() {
  at_quick_exit(bar);
  quick_exit(0);
}
